Bug 100097 - Crash when trying to add relationships between tables (gtk3 only)
Summary: Crash when trying to add relationships between tables (gtk3 only)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.0.1 target:5.1.4
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2016-05-28 07:08 UTC by Julien Nabet
Modified: 2018-11-22 16:18 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
console bt logs (4.71 KB, text/plain)
2016-05-28 07:08 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2016-05-28 07:08:42 UTC
Created attachment 125336 [details]
console bt logs

On pc Debian x86-64 with master sources updated yesterday + enable-dbgutil, I got a crash when trying to add relationships.

Steps to reproduce:
1) Retrieve DB from https://bugs.documentfoundation.org/attachment.cgi?id=111789
2) Open it in Base
3) Menu Tools/RelationShips
4) Try to create a link between user_id field from table tbl_users to controller_id from table tbl_new_bugs (last field displayed)

=> Crash
Comment 1 frofa 2016-05-28 10:53:44 UTC
Using your sample file, following your steps exactly, on Mac OSX 10.11.5, I get a 'Relation Design' message box saying 'This relation already exists. Do you want to edit it or create a new one?' But no crash occurs! I get the same message when using OpenOffice Base (the latest version). NOTE: I am using LO v. 5.1.3.2
Comment 2 Julien Nabet 2016-05-28 11:08:54 UTC
Thank you Frofa for your feedback.
I made other tests and reproduced this also with LO Debian package 5.1.3.2.
However, when I used gtk or gen rendering, I didn't reproduce this.

So it seems gtk3 only.
Comment 3 Julien Nabet 2016-05-28 11:11:27 UTC
Caolán: since it seems to concern only gtk3, thought you might be interested in this one.
Comment 4 Buovjaga 2016-05-28 16:29:26 UTC
Repro (by drag'n'dropping the user_id field on the other).

Arch Linux 64-bit, KDE Plasma 5
Version: 5.3.0.0.alpha0+
Build ID: ab0189433c1593c3c3ccf6a947aa7ba84e806d91
CPU Threads: 8; OS Version: Linux 4.5; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8)
Built on May 28th 2016
Launched with SAL_USE_VCLPLUGIN=gtk3
Comment 5 Caolán McNamara 2016-05-28 20:55:26 UTC
*pff!*, well there's a nightmare of dbaccess hackery and uno tunnels.
Comment 6 Julien Nabet 2016-05-29 08:24:57 UTC
Thank you Caolán for taking this one.
Could it be some side effect to initialization problem indicated here:
https://bugs.documentfoundation.org/show_bug.cgi?id=96703 ?
Comment 7 Commit Notification 2016-05-30 10:17:33 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=73f84ab139cb1d2564f9292fba08d69a0ab822c1

Resolves: tdf#100097 dbaccess self-dnd depends on getting its own transferable

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Caolán McNamara 2016-05-30 10:20:03 UTC
caolanm->julien: Nah, this seems unrelated to whatever is going on there
Comment 9 Commit Notification 2016-05-30 10:21:08 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6f41a9b06219c2d8e176f84a5ae4b80b22dc9ce5&h=libreoffice-5-2

Resolves: tdf#100097 dbaccess self-dnd depends on getting its own transferable

It will be available in 5.2.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2016-05-30 11:43:21 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c9122b4ae545efc9706c5802c4ab68f1ba7518df&h=libreoffice-5-1

Resolves: tdf#100097 dbaccess self-dnd depends on getting its own transferable

It will be available in 5.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.