Resolves: tdf#100097 dbaccess self-dnd depends on getting its own transferable

on drop that it set on drag. It does some uno tunnel foo to drag the data it
needs back out of it in some grotesque fashion.

So we have to follow the same style of hackery as under MacOSX to detect
on drop that there is an active drag started by ourself and so use that
active drag's transferable as the source transferable for the drop, rather
that use the intermediate universal GtkDnDTransferable.

Change-Id: I3c3a94416db908603bde8f15dc5b1c9d726b8dbd