vcl/inc/unx/gtk/gtkinst.hxx
@@ -166,6 +166,11 @@ public:
     void dragDelete();
     void dragEnd(GdkDragContext* context);
     void dragDataGet(GtkSelectionData *data, guint info);
+
+    // For LibreOffice internal D&D we provide the Transferable without Gtk
+    // intermediaries as a shortcut, see tdf#100097 for how dbaccess depends on this
+    static GtkDragSource* g_ActiveDragSource;
+    css::uno::Reference<css::datatransfer::XTransferable> GetTransferrable() const { return m_xTrans; }
 };
 
 #endif
